Update Image generator

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-# Google AI API Key
-# Get your API key from: https://ai.google.dev/gemini-api/docs/api-key
-GOOGLE_AI_API_KEY=your_google_ai_api_key_here
+# OpenRouter API Key
+OPENROUTER_API_KEY=your_openrouter_api_key_here
